static/css/courses.css
.main{
    padding: 20px
}
.course-wrapper{
    padding: 20px;
    margin: 5px;
    border-radius: 15px;
    border: #00b0f0 2px solid;
    position: relative;
}
.seen-icon{
    position: absolute;
    top: 5px;
    right: 5px;
    text-align: end;
    font-size: 24px;
}
.course-seen{
    color: #00b0f0;
}
.seen-icon .glyphicon{
    font-weight: bold;
}
.show-more{
    margin-top: 30px;
    float: right;
}
.course-header {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: block;
    height: 100%;
    width: 100%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 50px;
}
.course-shadow-layer{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #fff;
    filter: blur(150px);
}
.course-info{
    position: absolute;
    left: 0;
    right: 0;
    display: block;
    font-weight: bold;
    color: #333;
    margin-top:90px;
}
.reveal-container{
    position: absolute;
    top: 0;
    height: 100%;
    width: 100%;
}
section{
    height: 80%;
    overflow: -moz-scrollbars-vertical; 
    overflow-y: scroll;
}
::-webkit-scrollbar {
    width: 20px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey; 
    border-radius: 10px;
  }
   
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: skyblue; 
    border-radius: 10px;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: deepskyblue; 
  }
.content{
    background: #fff2cc;
    height: 100%;
}
.course-content-wrapper{
    background: #fff;
    border-radius: 15px;
    padding: 15px;
}

.course-container{
    position: relative;
    height: 100%;
    width: 100%;
}
.reveal .progress{
    color: #00b0f0!important;
    height: 11px!important;
    
}
.manager-overview-employees{
    font-size: 10px;
    padding: 15px;
}

.badge-new{
    background: lightgreen;
    font-size: 8px;
    color: white;
    margin: 0 5px;
    padding: 5px;
    border-radius: 100%;
    font-weight: bold;
}

.left {
    transform: rotate(135deg);
    -webkit-transform: rotate(135deg);
}
.arrow {
    border: solid skyblue;
    border-width: 0 10px 10px 0;
    padding: 10px;
    display: inline-block;
    position: absolute;
    top: 15px;
    left: 30px;
    border-radius: 3px;
    z-index: 999999999999999999;
    transition: padding 0.3s ease, border-width 0.3s ease ;
}
.arrow:hover{
    border-width: 0 13px 13px 0;
    padding: 13px;
}
.card {
    position: relative;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    height: 120px;
  }
  
  .card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
  }
  
  .card-info-container {
    padding: 2px 16px;
  }
  .course-title{
      padding-left: 0;
      font-size: 24px;
      font-weight: bold;
  }

